[package]
name = "ixoswap"
version = "1.2.0"
authors = ["ben2x4 <ben2x4@protonmail.com>"]
edition = "2018"
description = "Cosmwasm AMM"
license = "Apache-2.0"
repository = "https://github.com/ixofoundation/ixo-contracts"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "1.0.1" }
cw1155-base = { git = "https://github.com/ixofoundation/ixo-contracts.git", branch = "master", version = "0.16.0" }
cw1155 = { git = "https://github.com/ixofoundation/ixo-contracts.git", branch = "master", version = "0.16.0" }
cw2 = { version = "1.1.0" }
cw20-lp = { git = "https://github.com/ixofoundation/ixo-contracts.git", branch = "ixo-swap", version = "1.1.2" }
cw20-base-lp = { git = "https://github.com/ixofoundation/ixo-contracts.git", branch = "ixo-swap", version = "0.16.0", features = ["library"] }
cosmwasm-std = { version = "1.3.1" }
cosmwasm-storage = { version = "1.3.1" }
cosmwasm-schema = { version = "1.3.1" }
cw-storage-plus = { version = "1.1.0" }
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
prost = { version = "0.11.9" }
anyhow = { version = "1.0.41" }
sha2 = { version = "0.10.7" }
base64ct = { version = "1.6.0" }

[dev-dependencies]
cw-multi-test = { path = "packages/cw-multi-test",  version = "0.16.2" }
